--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitter Clone</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}" /> -->
+    <link rel="stylesheet" href="../static/css/style.css">
     <link rel="icon" type="img/jpeg" href="{% static 'img/twitter.jpeg' %}">
 </head>
 <body>
